@@ -1,13 +1,17 @@
 package com.ssafy.pillme.management.application;
 
 import static com.ssafy.pillme.global.code.ErrorCode.INFORMATION_NOT_FOUND;
+import static com.ssafy.pillme.global.code.ErrorCode.INVALID_MEMBER_INFO;
+import static com.ssafy.pillme.global.code.ErrorCode.INVALID_MEMBER_REQUEST;
+import static com.ssafy.pillme.global.code.ErrorCode.INVALID_TIME_REQUEST;
 import static com.ssafy.pillme.global.code.ErrorCode.MANAGEMENT_NOT_FOUND;
 import static com.ssafy.pillme.global.code.ErrorCode.MEDICATION_NOT_FOUND;
 
 import com.ssafy.pillme.auth.domain.entity.Member;
-import com.ssafy.pillme.auth.infrastructure.repository.UserRepository;
-import com.ssafy.pillme.global.code.ErrorCode;
+import com.ssafy.pillme.auth.infrastructure.repository.MemberRepository;
 import com.ssafy.pillme.global.exception.CommonException;
+import com.ssafy.pillme.management.application.exception.InvalidMemberException;
+import com.ssafy.pillme.management.application.exception.InvalidTimeSelectException;
 import com.ssafy.pillme.management.application.exception.NoInformationException;
 import com.ssafy.pillme.management.application.exception.NoManagementException;
 import com.ssafy.pillme.management.application.exception.NoMedicationException;
@@ -16,16 +20,21 @@ import com.ssafy.pillme.management.application.response.TakingDetailResponse;
 import com.ssafy.pillme.management.domain.Information;
 import com.ssafy.pillme.management.domain.Management;
 import com.ssafy.pillme.management.domain.item.TakingInformationItem;
+import com.ssafy.pillme.management.domain.item.TakingSettingItem;
+import com.ssafy.pillme.management.domain.type.TakingType;
 import com.ssafy.pillme.management.infrastructure.InformationRepository;
 import com.ssafy.pillme.management.infrastructure.ManagementRepository;
+import com.ssafy.pillme.management.presentation.request.AddTakingInformationRequest;
 import com.ssafy.pillme.management.presentation.request.AllTakingCheckRequest;
 import com.ssafy.pillme.management.presentation.request.ChangeTakingInformationRequest;
+import com.ssafy.pillme.management.presentation.request.CheckCurrentTakingRequest;
 import com.ssafy.pillme.management.presentation.request.DeleteManagementRequest;
-import com.ssafy.pillme.management.presentation.request.MedicationRegisterRequest;
 import com.ssafy.pillme.management.presentation.request.SingleTakingCheckRequest;
+import com.ssafy.pillme.management.presentation.request.TakingInformationRegisterRequest;
 import com.ssafy.pillme.search.domain.Medication;
 import com.ssafy.pillme.search.infrastructure.MedicationRepository;
 import java.time.LocalDate;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
@@ -41,30 +50,50 @@ public class ManagementService {
     private final ManagementRepository managementRepository;
     private final InformationRepository informationRepository;
     private final MedicationRepository medicationRepository;
-    private final UserRepository memberRepository;
+    private final MemberRepository memberRepository;
 
-    public void saveTakingInformation(final MedicationRegisterRequest request) {
-        // TODO: 인증을 통한 맴버 객체 생성 완료 후에는 정식 엔티티로 바꿔야 한다.
-        Member writer = Member.builder().build();
+    public Information saveTakingInformation(
+            final TakingInformationRegisterRequest request,
+            final Member writer
+    ) {
         Member reader = memberRepository.findById(request.reader())
-                .orElseThrow(() -> new CommonException(ErrorCode.USER_NOT_FOUND));
+                .orElseThrow(() -> new CommonException(INVALID_MEMBER_INFO));
         Information savedInformation = informationRepository.save(request.toInformation(writer, reader));
-        saveManagement(request.takingInformationItems(), savedInformation);
+
+        for (TakingSettingItem medication : request.medications()) {
+            saveManagement(medication, savedInformation);
+        }
+
+        return savedInformation;
     }
 
-    private void saveManagement(final List<TakingInformationItem> takingList, final Information information) {
-        for (TakingInformationItem info : takingList) {
-            Medication medication = medicationRepository.findById(info.medicationId())
-                    .orElseThrow(() -> new NoMedicationException(MEDICATION_NOT_FOUND));
+    public Information addTakingInformation(
+            final Long infoId,
+            final AddTakingInformationRequest request,
+            final Member member
+    ) {
+        Information information = findInformationById(infoId);
+        checkMemberValidation(member, information);
+        saveManagement(request.medication(), information);
+        return information;
+    }
 
-            Management management = info.toManagement(medication, information);
-            managementRepository.save(management);
-        }
+    private void saveManagement(
+            final TakingSettingItem settingItem,
+            final Information information
+    ) {
+        Medication medication = getMedicationById(settingItem.medicationId());
+
+        Management management = settingItem.toManagement(medication, information);
+        managementRepository.save(management);
     }
 
     @Transactional(readOnly = true)
-    public TakingDetailResponse findByInformationId(final Long id) {
-        Information information = informationRepository.findById(id)
+    public TakingDetailResponse selectInformation(
+            final Long id,
+            final Long readerId
+    ) {
+        Information information = informationRepository.findByIdAndReaderIdAndDeletedIsFalse(id, readerId)
                 .orElseThrow(() -> new NoInformationException(INFORMATION_NOT_FOUND));
 
         return TakingDetailResponse.of(
@@ -77,41 +106,85 @@ public class ManagementService {
     }
 
     @Transactional(readOnly = true)
-    public List<PrescriptionResponse> findManagementByDate(final LocalDate localDate) {
+    public List<PrescriptionResponse> findManagementByDate(final LocalDate localDate, final Member member) {
         return informationRepository.findByDate(localDate)
                 .stream()
-                .map(PrescriptionResponse::of)
-                .toList();
+                .map(information -> PrescriptionResponse.of(
+                        information, member
+                ))
+                .collect(Collectors.toList());
     }
 
-    public void changeTakingInformation(final Long infoId, final ChangeTakingInformationRequest request) {
+    public TakingDetailResponse changeTakingInformation(
+            final Long infoId,
+            final ChangeTakingInformationRequest request,
+            final Member member) {
+        Information information = findInformationById(infoId);
+
+        checkMemberValidation(member, information);
+
+        List<TakingInformationItem> items = new ArrayList<>();
+
         request.medications().forEach(medication -> {
             Management management = managementRepository
                     .findByInformationIdAndMedicationId(infoId, medication.medicationId())
                     .orElseThrow(() -> new NoManagementException(INFORMATION_NOT_FOUND));
 
             management.changeTakingInformation(medication);
+
+            items.add(TakingInformationItem.from(management));
         });
+
+        return TakingDetailResponse.of(information, items);
     }
 
-    public void checkSingleMedicationTaking(final Long infoId, final SingleTakingCheckRequest request) {
+    public void checkSingleMedicationTaking(
+            final Long infoId,
+            final SingleTakingCheckRequest request,
+            final Member member
+    ) {
+        Information information = findInformationById(infoId);
+
+        checkMemberValidation(member, information);
+
         Management management = managementRepository.findByInformationIdAndMedicationId(infoId, request.medicationId())
                 .orElseThrow(() -> new NoManagementException(MANAGEMENT_NOT_FOUND));
 
         checkMedicationTaking(management, request.time());
     }
 
-    public void checkAllMedicationTaking(final Long infoId, final AllTakingCheckRequest request) {
-        Information information = informationRepository.findById(infoId)
-                .orElseThrow(() -> new NoInformationException(INFORMATION_NOT_FOUND));
+    public void checkAllMedicationTaking(
+            final Long infoId,
+            final AllTakingCheckRequest request,
+            final Member member
+    ) {
+        Information information = findInformationById(infoId);
+        checkMemberValidation(member, information);
 
         for (Management management : information.getManagements()) {
             checkMedicationTaking(management, request.time());
         }
     }
 
-    private void checkMedicationTaking(final Management management, String time) {
-        management.checkMedicationTaking(time);
+    public void checkCurrentTakingAll(
+            final CheckCurrentTakingRequest request,
+            final Member member
+    ) {
+        List<Management> managements = managementRepository.findByInformationByDate(request.date(), member);
+
+        for (Management management : managements) {
+            checkMedicationTaking(management, request.time());
+        }
+    }
+
+    private void checkMedicationTaking(final Management management, TakingType time) {
+        switch (time) {
+            case MORNING -> management.checkMorningTaking();
+            case LUNCH -> management.checkLunchTaking();
+            case DINNER -> management.checkDinnerTaking();
+            case SLEEP -> management.checkSleepTaking();
+            default -> throw new InvalidTimeSelectException(INVALID_TIME_REQUEST);
+        }
     }
 
     public void deleteManagement(final Long infoId, final DeleteManagementRequest request) {
@@ -129,9 +202,7 @@ public class ManagementService {
     }
 
     private void deleteInformation(final Long infoId) {
-        Information information = informationRepository.findByIdAndDeletedIsFalse(infoId)
-                .orElseThrow(() -> new NoInformationException(INFORMATION_NOT_FOUND));
-
+        Information information = findInformationById(infoId);
         information.delete();
 
         for (Management management : information.getManagements()) {
@@ -139,4 +210,22 @@ public class ManagementService {
         }
     }
 
+    private void checkMemberValidation(
+            final Member member,
+            final Information information
+    ) {
+        if (!information.getReader().getId().equals(member.getId())) {
+            throw new InvalidMemberException(INVALID_MEMBER_REQUEST);
+        }
+    }
+
+    private Information findInformationById(final Long infoId) {
+        return informationRepository.findByIdAndDeletedIsFalse(infoId)
+                .orElseThrow(() -> new NoInformationException(INFORMATION_NOT_FOUND));
+    }
+
+    private Medication getMedicationById(final Long medicationId) {
+        return medicationRepository.findById(medicationId)
+                .orElseThrow(() -> new NoMedicationException(MEDICATION_NOT_FOUND));
+    }
 }
